# rust-whirlpoolsum

./: CHANGELOG  Cargo.toml  README.md  build.sh  cross.sh  install.sh  test.sh
.agent/workflows/: cross_compile.md
.github/: CODE_OF_CONDUCT.md
addons/apparmor/: README.md  TESTING.md  whirlpoolsum
addons/bash-completion/: README.md  whirlpoolsum
src/: benchmark.rs  cli.rs  config.rs  help.rs  lib.rs  main.rs  processor.rs  security.rs  util.rs  verifier.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: cli_tests.rs  functions.sh  rpn_tests.rs  test_benchmark.sh  test_checksum_file.sh  test_file_checksum.sh  test_json_output.sh  test_stdin_check.sh  test_stdin_text.sh  test_yaml_output.sh  util_tests.rs
