[package]
name = "whirlpoolsum"
version = "0.3.0"
edition = "2021"
description = "Rust version of a whirlpoolsum that prints and checks WHIRLPOOL 512-bit checksums."
authors = ["Qwen3-Max"]
license = "CC0-1.0"
repository = "https://github.com/c0m4r/rust-whirlpoolsum"
keywords = ["checksum", "whirlpool", "security", "integrity", "hash"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
whirlpool = "0.10.4"
