[package]
name = "whirlpoolsum"
version = "0.9.2"
edition = "2021"
description = "Rust version of the whirlpoolsum that prints and checks WHIRLPOOL 512-bit checksums."
authors = ["Qwen3-Max, Qwen3-Coder, Claude Sonnet 4.5, c0m4r, Gemini 3 Pro"]
license = "CC0-1.0"
repository = "https://github.com/c0m4r/rust-whirlpoolsum"
keywords = ["checksum", "whirlpool", "security", "integrity", "hash"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
whirlpool = "0.10.4"
colored = "3.0.0"
rayon = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
chrono = "0.4.38"
libc = "0.2.177"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.4"
